--- a/SheetVI/ba2024-1-homework6-template.ipynb
+++ b/SheetVI/ba2024-1-homework6-template.ipynb
@@ -16,7 +16,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pyECLAT as eclat\n",
-    "from template import *"
+    "from template import *\n",
+    "from itertools import combinations\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -172,6 +174,86 @@
     "R_exp = [(['A'], ['B'], 4, 1.0), (['A', 'D'], ['B'], 3, 1.0), (['B', 'D', 'E'], ['A'], 3, 1.0), (['A', 'D', 'E'], ['B'], 3, 1.0), (['A', 'B', 'D'], ['E'], 3, 1.0), (['D', 'E'], ['A', 'B'], 3, 1.0), (['A', 'D'], ['B', 'E'], 3, 1.0), (['A', 'E'], ['B'], 4, 1.0), (['A', 'B'], ['E'], 4, 1.0), (['A'], ['B', 'E'], 4, 1.0), (['D', 'E'], ['A'], 3, 1.0), (['A', 'D'], ['E'], 3, 1.0), (['A'], ['E'], 4, 1.0), (['C'], ['B'], 4, 1.0), (['C', 'E'], ['B'], 3, 1.0), (['D'], ['B'], 4, 1.0), (['D', 'E'], ['B'], 3, 1.0), (['E'], ['B'], 5, 1.0)]\n",
     "R_act = getStrongRulesForDatabase(dbExample, 3, 1.0)\n",
     "testRuleGeneration(R_exp, R_act)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_transaction_data(file_path):\n",
+    "    transactions = []\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            transactions.append(line.strip().split())\n",
+    "    return transactions\n",
+    "transactions = read_transaction_data('shop.dat')\n",
+    "#generate itemsets\n",
+    "def generate_itemsets(transactions, size):\n",
+    "    itemsets = defaultdict(int)\n",
+    "    for transaction in transactions:\n",
+    "        for itemset in combinations(transaction, size):\n",
+    "            itemsets[itemset] += 1\n",
+    "    return itemsets\n",
+    "#generate association rules\n",
+    "def generate_association_rules(transactions, min_support, min_confidence):\n",
+    "    # Calculate support for itemsets of size 1\n",
+    "    itemsets = generate_itemsets(transactions, 1)\n",
+    "    frequent_itemsets = {itemset: support for itemset, support in itemsets.items() if support >= min_support}\n",
+    "    # Generate rules\n",
+    "    rules = []\n",
+    "    for size in range(2, len(frequent_itemsets.keys()) + 1):\n",
+    "        itemsets = generate_itemsets(transactions, size)\n",
+    "        for itemset, support in itemsets.items():\n",
+    "            for i in range(1, size):\n",
+    "                for antecedent in combinations(itemset, i):\n",
+    "                    antecedent = tuple(sorted(antecedent))  # Ensure antecedent is a tuple\n",
+    "                    if antecedent not in frequent_itemsets:\n",
+    "                        # Skip antecedents not found in frequent_itemsets\n",
+    "                        continue\n",
+    "                    consequent = tuple(item for item in itemset if item not in antecedent)\n",
+    "                    confidence = support / frequent_itemsets[antecedent]\n",
+    "                    if confidence >= min_confidence and support >= min_support:\n",
+    "                        rules.append((antecedent, consequent, support, confidence))\n",
+    "    return rules\n",
+    "rules = generate_association_rules(transactions, min_support, min_confidence)\n",
+    "print(\"Generated association rules:\", rules)\n",
+    "def filter_rules(rules):\n",
+    "    return [rule for rule in rules if len(rule[1]) >= 2]\n",
+    "def sort_rules_by_support(rules):\n",
+    "    return sorted(rules, key=lambda x: x[2], reverse=True)\n",
+    "transactions = read_transaction_data('shop.dat')\n",
+    "min_support = 500\n",
+    "min_confidence = 0.75\n",
+    "#association rules\n",
+    "rules = generate_association_rules(transactions, min_support, min_confidence)\n",
+    "filtered_rules = filter_rules(rules)\n",
+    "#Sort rules\n",
+    "sorted_rules = sort_rules_by_support(rules)\n",
+    "sorted_filtered_rules = sort_rules_by_support(filtered_rules)\n",
+    "#strong rules\n",
+    "print(\"Strong Rules:\")\n",
+    "for idx, rule in enumerate(sorted_rules, start=1):\n",
+    "    antecedent = \", \".join(rule[0])\n",
+    "    consequent = \", \".join(rule[1])\n",
+    "    support = rule[2]\n",
+    "    confidence = rule[3]\n",
+    "    print(f\"{idx}. If {{{antecedent}}} then {{{consequent}}}\")\n",
+    "    print(f\"   - Support: {support}\")\n",
+    "    print(f\"   - Confidence: {confidence:.2%}\")\n",
+    "    print()\n",
+    "#sub-list of strong rules\n",
+    "print(\"Sub-list:\")\n",
+    "for idx, rule in enumerate(sorted_filtered_rules, start=1):\n",
+    "    antecedent = \", \".join(rule[0])\n",
+    "    consequent = \", \".join(rule[1])\n",
+    "    support = rule[2]\n",
+    "    confidence = rule[3]\n",
+    "    print(f\"{idx}. If {{{antecedent}}} then {{{consequent}}}\")\n",
+    "    print(f\"   - Support: {support}\")\n",
+    "    print(f\"   - Confidence: {confidence:.2%}\")\n",
+    "    print()"
    ]
   }
  ],
