--- a/SheetVI/sheetVI.ipynb
+++ b/SheetVI/sheetVI.ipynb
@@ -68,7 +68,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Eclat Function (db, minsup)"
+   ]
   },
   {
    "attachments": {
