--- a/SheetVI/sheetVI.ipynb
+++ b/SheetVI/sheetVI.ipynb
@@ -24,13 +24,17 @@
    "source": [
     "Si tenemos que:\n",
     "\n",
-    "$ i(S)=ABC \\\\ i(T)=ABCD$\n",
+    "$ i(S)=ABC \\\\ i(T)=ABCD $\n",
     "\n",
-    "Entonces $i(ST)= i(S) \\bigcap i(T)$\n",
+    "Entonces $ i(ST)= i(S) \\bigcap i(T) $\n",
     "\n",
     "Si reemplazamos los valores en la función:\n",
     "\n",
-    "$ABC = (ABC) \\bigcap (ABCD) \\\\ ABC = ABC$"
+    "$ ABC = (ABC) \\bigcap (ABCD)$\n",
+    "\n",
+    "Danto como resultado que:\n",
+    "\n",
+    "$ ABC = ABC \\\\ i(ST)=ABC $"
    ]
   },
   {
@@ -94,7 +98,9 @@
     "\\text{sup}(W) & = 100 \\\\\n",
     "\\text{conf}(X \\rightarrow Y) & = \\frac{\\text{sup}(XY)}{\\text{sup}(X)} = \\frac{100}{150} = \\frac{2}{3} \\approx 0.67 \\\\\n",
     "\\text{conf}(W \\rightarrow Y) & = \\frac{\\text{sup}(WY)}{\\text{sup}(W)} = \\frac{60}{100} = 0.6 \\\\\n",
-    "\\end{align*}\n"
+    "\\end{align*}\n",
+    "Por lo tanto, $\\text{conf}(X \\rightarrow Y) > \\text{conf}(W \\rightarrow Y)$, incluso cuando $W \\subset X$.\n",
+    "\n"
    ]
   },
   {
