--- a/SheetVI/ba2024-1-homework6-template.ipynb
+++ b/SheetVI/ba2024-1-homework6-template.ipynb
@@ -2,14 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +44,7 @@
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\juanc\\AppData\\Local\\Temp\\ipykernel_13588\\1803632442.py\", line 38, in <module>\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Local\\Temp\\ipykernel_24016\\1803632442.py\", line 38, in <module>\n",
       "    F_act = eclat(dbExample, 3)\n",
       "            ^^^^^^^^^^^^^^^^^^^\n",
       "TypeError: 'module' object is not callable\n",
@@ -178,9 +171,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Local\\Temp\\ipykernel_24016\\2804586820.py\", line 36, in <module>\n",
+      "    rules = generate_association_rules(transactions, min_support, min_confidence)\n",
+      "                                                     ^^^^^^^^^^^\n",
+      "NameError: name 'min_support' is not defined\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py\", line 2168, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\ultratb.py\", line 1454, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\ultratb.py\", line 1345, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\ultratb.py\", line 1192, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\ultratb.py\", line 1082, in format_exception_as_a_whole\n",
+      "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\ultratb.py\", line 1134, in get_records\n",
+      "    style = stack_data.style_with_executing_node(style, self._tb_highlight)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\juanc\\AppData\\Roaming\\Python\\Python312\\site-packages\\stack_data\\core.py\", line 455, in style_with_executing_node\n",
+      "    class NewStyle(style):\n",
+      "  File \"c:\\Users\\juanc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pygments\\style.py\", line 91, in __new__\n",
+      "    ndef[4] = colorformat(styledef[3:])\n",
+      "              ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\juanc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pygments\\style.py\", line 58, in colorformat\n",
+      "    assert False, \"wrong color format %r\" % text\n",
+      "AssertionError: wrong color format 'ansiyellow'\n"
+     ]
+    }
+   ],
    "source": [
     "def read_transaction_data(file_path):\n",
     "    transactions = []\n",
