Solve point 3 exercise 1

--- a/SheetIX/sheetIX.ipynb
+++ b/SheetIX/sheetIX.ipynb
@@ -50,6 +50,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "a) Taking into account that sup(xy)=sup(xyz), and that W is a subset of YZ, we can infer a couple of things:\n",
+    "        -First, adding Z to XY wont alter the outcome of its support\n",
+    "        -Second, every transaction that contains W also contains YZ, meaning, for this scenario, they can be considered as equals\n",
+    "    This means that, for this case, since we can replace YZ=W in sup(XYZ) to make sup(XW), and given that the confidence is calculated as the support of the itemset over the support of the first item (in this case X), as long as sup(XY)=sup(XW), then conf(R)=conf(R')\n",
+    "    As for the confidence of X, negative Y and X, negative W, we can once again apply the fact that Y is a subset of W, so any transaction that does not have W also will not have Y, and since this confidence is calculated by= (sup of first item-sup of itemset)/sup of itemset second item negative, we can use the fact that on the first solution we found sup(XY)=sup(XW), and that we now know that -Y=-W, both confidences will always (for this case) be equal\n",
+    "\n",
+    "b) For this case, we must first remember that lift(itemset)=sup(itemset)/sup(second item), apart from that sup(XY)=sup(XW), this turns our comparison from comparing every single support to being able to single it out as 1/sup(Y)>=1/sup(W). Now, we know thanks to how the sandwich hierarchy works that Y is a subset of W, which is itself a subset of YZ, this means that W has at least a support as high as Y, it is expected that XW has an association just as strong as XY, and the offset in possible higher support in XW means that its just as likely to have a higher or equal  lift(X→W) than lift(X→y).\n",
+    "\n",
+    "c) Now, to begin with, we already know that the confidence between these two itemsets is the same, which by how the conviction is calculated, leaves us only having to compare the numerators in the operation. This leaves us with an interesting case in which, once again, thanks to the sanwich association, we can assume that sup(Y) is equal or higher to sup(W), which is perfect for this case, since that means that 1-sup(W) is either higher or equal to 1-sup(Y), and since that is the numerator, we can safely conlcude that conv(X→W) is higher or equal to conv(X→WY).\n",
+    "\n",
+    "To end it all, we can almost always see that the rule X→W seems to have a better case than X→Y or others, this is mostly due to the higher possible conviction, higher possible lift and equal confidence, which all points out to seeing that X→W retains the best properties as a rule (that is when the \"higher than\" case applies and both are not equal)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# EXERCISE 2"
    ]
   },
